# internal/app/http/rest/validate_signature.go
@@ -4,8 +4,8 @@ import (
 	"net/http"
 	"strings"
 
-	"github.com/italolelis/fourkeys/internal/app/provider"
-	"github.com/italolelis/fourkeys/internal/pkg/log"
+	"github.com/italolelis/watchops/internal/app/provider"
+	"github.com/italolelis/watchops/internal/pkg/log"
 )
 
 // ValidateSignature middleware to validate the signature header.
